--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/icons/arab-trading-co.png">
     <!-- <link rel="icon" href="images/logos/logo-001.png"> -->
 
-    <title>Arab Trading Co - Home</title>
+    <title>Arab Trading - Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -88,46 +88,46 @@
           <div class="carousel-item active">
             <img class="first-slide d-block w-100" src="images/sliders/001.jpg" alt="First slide">
             <div class="container">
-              <div class="carousel-caption text-left">
+              <!-- <div class="carousel-caption text-left">
                 <h1>One</h1>
                 <p>Number 1.</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="carousel-item">
             <img class="first-slide d-block w-100" src="images/sliders/002.jpg" alt="Second slide">
             <div class="container">
-              <div class="carousel-caption">
+              <!-- <div class="carousel-caption">
                 <h1>Two</h1>
                 <p>Number 2.</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="carousel-item">
             <img class="first-slide d-block w-100" src="images/sliders/003.jpg" alt="Third slide">
             <div class="container">
-              <div class="carousel-caption">
+              <!-- <div class="carousel-caption">
                 <h1>Three</h1>
                 <p>Number 3.</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="carousel-item">
             <img class="first-slide d-block w-100" src="images/sliders/004.jpg" alt="Fourth slide">
             <div class="container">
-              <div class="carousel-caption">
+              <!-- <div class="carousel-caption">
                 <h1>Four</h1>
                 <p>Number 4.</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="carousel-item">
             <img class="first-slide d-block w-100" src="images/sliders/005.png" alt="Fifth slide">
             <div class="container">
-              <div class="carousel-caption text-right">
+              <!-- <div class="carousel-caption text-right">
                 <h1>Five</h1>
                 <p>Number 5.</p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -199,6 +199,142 @@
 
         <hr class="featurette-divider">
 
+        
+        <div>
+          <div class="row" style="padding-top: 30px !important; padding-bottom: 30px !important;">
+            <div class="col-md-6" >
+              <div class="row" >
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/001.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/002.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/003.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/004.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/005.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/006.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/007.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/008.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/009.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/010.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/011.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/012.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/013.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/014.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/015.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/016.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/017.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/018.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/019.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/020.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/021.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/022.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/023.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+                <div class="col-md-2" style="margin-bottom: 5px;">
+                  <div class="text-center">
+                    <img src="images/gallery/024.jpg" class="rounded clickImageEvent" href="#displayImageDiv" width="90" height="90">
+                  </div>            
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6" id="displayImageDiv" >
+              <img class="rounded" id="displayImage" src="images/gallery/001.jpg" width="500" height="370">
+            </div>
+          </div>
+        </div>
+
+
+        <hr class="featurette-divider" >
+
         <div class="row featurette" style="padding-top: 30px !important; padding-bottom: 30px !important;">
           <!-- <div class="col-md-3">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="height: 180px; width: 340px;" src="images/cards/company-card-en.jpg" data-holder-rendered="true">
@@ -257,8 +393,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery-3.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="js/jquery-3.js" crossorigin="anonymous"></script>
+    <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script> -->
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/custom.js"></script>
@@ -269,10 +405,18 @@
   			jQuery("#yrSpan").text(
           yrSpan.getFullYear() + ", " + (yrSpan.getFullYear()+1)
         );
-        /*jQuery("#yrSpan").text(
-  				dtToday.getDate() + " " + dtToday.getMonthName() + ", " + dtToday.getFullYear()
-  			);*/
   		});
+
+      jQuery(document).ready(function(){
+        jQuery(".clickImageEvent").click(function(){
+          jQuery("#displayImage").attr("src", this.src);
+        });
+      });
+
+
+
+
+
     </script>
   
 
