added address, added email, added-and-commented google-site-verification

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="This website is for the first Arab Trading Corporation in Jeju Island, South Korea">
     <meta name="author" content="Asif Mehmood">
+	
+	<!-- <meta name="google-site-verification" content="FqHBEpupXbx5pjDFSjaaeudiOUFWKijdSETsIn31Y0Y" /> -->
 
     <link rel="icon" href="images/icons/arab-trading-co.png">
     <!-- <link rel="icon" href="images/logos/logo-001.png"> -->
@@ -354,7 +356,16 @@
               <tbody>
                 <tr>
                   <td align="right">Email:</td>
-                  <td align="left" style="padding-left: 20px;">arabtrading203@gmail.com</td>
+					<td align="left" style="padding-left: 20px;">
+						<ul style="margin-bottom: 3px;">
+							<li>info@arabtrading.co.kr</li>
+							<li>arabtrading203@gmail.com</li>
+						</ul>
+					</td>
+                </tr>
+				<tr>
+                  <td align="right">Address:</td>
+                  <td align="left" style="padding-left: 20px;">House No 203, Senban-Ro 14gil 26(Hwabuk 1Dong) Jeju-si, Jeju SSGP, Korea</td>
                 </tr>
                 <tr>
                   <td align="right">CELL #:</td>
